--- a/app/src/main/res/layout/activity_lista_serv.xml
+++ b/app/src/main/res/layout/activity_lista_serv.xml
@@ -19,14 +19,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageButton
+            android:id="@+id/imgBtnVoltaHome1"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@color/Azul"
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/seta_voltar" />
 
-        <ImageView
+
+        <ImageButton
             android:id="@+id/ImgBtnAddServ"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:scaleType="centerCrop"
+            android:background="@color/Azul"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/add_file" />
@@ -64,6 +76,18 @@
             android:textColor="@color/black"
             android:textSize="26sp"
             android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@+id/myRectangleView2" />
+
+        <TextView
+            android:id="@+id/txtViewText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-30dp"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="26sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/myRectangleView2" />
 
