--- a/app/src/main/res/layout/activity_add_func.xml
+++ b/app/src/main/res/layout/activity_add_func.xml
@@ -4,6 +4,115 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".AddFunc">
+
+    <View
+        android:id="@+id/viewHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:background="@color/Azul"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/btnFechaAdd"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fecha" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/TxtAddFunc"
+        android:textAlignment="center"
+        android:layout_marginTop="70dp"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:text="@string/TxtEmailFunc"
+        app:layout_constraintBottom_toTopOf="@+id/editEmailFunc"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editEmailFunc"
+        style="@style/editText"
+        android:inputType="textEmailAddress"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="50dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:text="@string/TxtNomeFunc"
+        app:layout_constraintBottom_toTopOf="@+id/editNomeFunc"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editNomeFunc"
+        style="@style/editText"
+        android:inputType="textPersonName"
+        app:layout_constraintTop_toBottomOf="@+id/editEmailFunc"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:text="@string/txtSenhaFunc"
+        app:layout_constraintBottom_toTopOf="@+id/editSenhaFunc"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editSenhaFunc"
+        style="@style/editText"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@+id/editNomeFunc"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="50dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:text="@string/TxtCargoFunc"
+        app:layout_constraintBottom_toTopOf="@+id/editCargoFunc"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editCargoFunc"
+        style="@style/editText"
+        android:inputType="text"
+        app:layout_constraintTop_toBottomOf="@+id/editSenhaFunc"
+        tools:ignore="MissingConstraints" />
+
+
+
+    <Button
+        android:id="@+id/btnSalvarFunc"
+        android:layout_width="260dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="0dp"
+        android:background="@color/Azul"
+        android:text="@string/TxtSalvar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editCargoFunc" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
