--- a/app/src/main/res/layout/activity_atualiza_servico.xml
+++ b/app/src/main/res/layout/activity_atualiza_servico.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".AddServ">
-
+    tools:context=".AtualizaServico">
     <View
         android:id="@+id/viewHeader"
         android:layout_width="wrap_content"
@@ -71,8 +69,9 @@
         tools:ignore="MissingConstraints" />
 
 
+
     <Button
-        android:id="@+id/btnSalvar"
+        android:id="@+id/btnAtualiza"
         android:layout_width="260dp"
         android:layout_height="64dp"
         android:layout_marginBottom="0dp"
@@ -127,5 +126,12 @@
         app:layout_constraintBottom_toTopOf="@+id/editAreaserv"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Spinner
+        android:id="@+id/dropdownNivel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dropdown"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editAreaserv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
