--- a/app/src/main/res/layout/activity_atualizar_func.xml
+++ b/app/src/main/res/layout/activity_atualizar_func.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".AddServ">
+    tools:context=".AtualizarFunc">
 
     <View
         android:id="@+id/viewHeader"
@@ -19,6 +18,7 @@
         android:id="@+id/btnFechaAdd"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_margin="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/fecha" />
@@ -27,7 +27,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/TxtAddServ"
+        android:text="@string/TxtAtualizaFunc"
         android:textAlignment="center"
         android:layout_marginTop="70dp"
         android:textColor="@color/black"
@@ -66,7 +66,7 @@
     <EditText
         android:id="@+id/editAreaserv"
         style="@style/editText"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         app:layout_constraintTop_toBottomOf="@+id/editDescserv"
         tools:ignore="MissingConstraints" />
 
@@ -126,6 +126,5 @@
         android:text="@string/TxtplatServ"
         app:layout_constraintBottom_toTopOf="@+id/editAreaserv"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
