--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,20 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:paddingStart">15dp</item>
     </style>
+
+    <!--Info serv-->
+    <style name="StyleInfoServ">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">50dp</item>
+        <item name="android:layout_marginTop">36dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+
+    <style name="MyToolbarStyle" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:colorBackground">@color/Azul</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 </resources>
