--- a/app/src/main/res/layout/activity_add_serv.xml
+++ b/app/src/main/res/layout/activity_add_serv.xml
@@ -77,6 +77,8 @@
         android:layout_height="64dp"
         android:layout_marginBottom="0dp"
         android:text="@string/TxtSalvar"
+        android:background="@color/Azul"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
