--- a/app/src/main/res/layout/activity_atualiza_servico.xml
+++ b/app/src/main/res/layout/activity_atualiza_servico.xml
@@ -25,7 +25,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/TxtAddServ"
+        android:text="@string/txtUpdateServ"
         android:textAlignment="center"
         android:layout_marginTop="70dp"
         android:textColor="@color/black"
@@ -74,7 +74,10 @@
         android:id="@+id/btnAtualiza"
         android:layout_width="260dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/borda_aredondada"
+        app:backgroundTint="@color/Azul"
+        android:textColor="@color/white"
         android:text="@string/TxtSalvar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,7 +133,11 @@
         android:id="@+id/dropdownNivel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
         android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editAreaserv" />
 
