--- a/app/src/main/res/layout/activity_atualizar_func.xml
+++ b/app/src/main/res/layout/activity_atualizar_func.xml
@@ -27,104 +27,92 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/TxtAtualizaFunc"
+        android:text="@string/TxtAddFunc"
         android:textAlignment="center"
         android:layout_marginTop="70dp"
         android:textColor="@color/black"
         android:textSize="22sp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editNomeEmpresa"
-        style="@style/editText"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/editTitulo"
-        style="@style/editText"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editNomeEmpresa"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/editTextDate"
-        style="@style/editText"
-        android:inputType="date"
-        app:layout_constraintTop_toBottomOf="@+id/editTitulo"
-        tools:ignore="MissingConstraints" />
-
-
-    <EditText
-        android:id="@+id/editDescserv"
-        style="@style/editText"
-        android:inputType="textMultiLine"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/editAreaserv"
-        style="@style/editText"
-        android:inputType="textMultiLine"
-        app:layout_constraintTop_toBottomOf="@+id/editDescserv"
-        tools:ignore="MissingConstraints" />
-
-
-    <Button
-        android:id="@+id/btnSalvar"
-        android:layout_width="260dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="0dp"
-        android:text="@string/TxtSalvar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editAreaserv" />
-
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:text="@string/TxtPrazo"
-        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
+        android:text="@string/TxtEmailFunc"
+        app:layout_constraintBottom_toTopOf="@+id/editEmailFunc"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editEmailFunc"
+        style="@style/editText"
+        android:inputType="textEmailAddress"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="50dp" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:text="@string/TxtTitulo"
-        app:layout_constraintBottom_toTopOf="@+id/editTitulo"
+        android:text="@string/TxtNomeFunc"
+        app:layout_constraintBottom_toTopOf="@+id/editNomeFunc"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <EditText
+        android:id="@+id/editNomeFunc"
+        style="@style/editText"
+        android:inputType="textPersonName"
+        app:layout_constraintTop_toBottomOf="@+id/editEmailFunc"
+        tools:ignore="MissingConstraints" />
+
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:text="@string/TxtNomeEmpresa"
-        app:layout_constraintBottom_toTopOf="@+id/editNomeEmpresa"
+        android:text="@string/txtSenhaFunc"
+        app:layout_constraintBottom_toTopOf="@+id/editSenhaFunc"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editSenhaFunc"
+        style="@style/editText"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@+id/editNomeFunc"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="50dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:text="@string/TxtDescServ"
-        app:layout_constraintBottom_toTopOf="@+id/editDescserv"
+        android:text="@string/TxtCargoFunc"
+        app:layout_constraintBottom_toTopOf="@+id/editCargoFunc"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:text="@string/TxtplatServ"
-        app:layout_constraintBottom_toTopOf="@+id/editAreaserv"
-        app:layout_constraintStart_toStartOf="parent" />
+    <EditText
+        android:id="@+id/editCargoFunc"
+        style="@style/editText"
+        android:inputType="text"
+        app:layout_constraintTop_toBottomOf="@+id/editSenhaFunc"
+        tools:ignore="MissingConstraints" />
+
+
+
+    <Button
+        android:id="@+id/btnSalvarFunc"
+        android:layout_width="260dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="0dp"
+        android:background="@color/Azul"
+        android:textColor="@color/white"
+        android:text="@string/TxtSalvar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editCargoFunc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
