--- a/app/src/main/res/layout/activity_detalhes_serv.xml
+++ b/app/src/main/res/layout/activity_detalhes_serv.xml
@@ -4,15 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".DetalhesServ">
-
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/toolbar"
-        android:background="@color/Azul"
-        app:popupTheme="@style/MyToolbarStyle"
-        tools:ignore="MissingConstraints" />
 
 
     <View
@@ -36,15 +29,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/seta_voltar" />
 
+    <ImageButton
+        android:id="@+id/imgBtnsalva"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_margin="10dp"
+        android:background="@color/Azul"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/save" />
+
     <TextView
         android:id="@+id/txtViewTitulo"
         style="TxtInfoHotel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="60dp"
+        android:textAllCaps="true"
         android:textColor="@color/black"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="20dp"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +69,7 @@
         android:layout_height="30dp"
         android:background="@color/white"
         android:contentDescription="@string/descImgRelogio"
-        android:layout_margin="40dp"
+        android:layout_margin="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewEmpresa"
         app:srcCompat="@drawable/prazo_img" />
@@ -77,41 +81,93 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintStart_toEndOf="@+id/btnImageprazo"
         app:layout_constraintTop_toBottomOf="@+id/txtViewEmpresa" />
+
+    <Button
+        android:id="@+id/btnPrazo"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="Button"
+        android:textAllCaps="false"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnImageprazo" />
 
     <TextView
         android:id="@+id/txtViewArea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="30dp"
         android:textAllCaps="false"
         android:textSize="14sp"
-        android:layout_margin="50dp"
         android:textStyle="italic"
-        app:layout_constraintTop_toBottomOf="@+id/btnImageprazo"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPrazo" />
 
     <TextView
         android:id="@+id/textView9"
         style="@style/StyleInfoServ"
-        android:layout_margin="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="24dp"
         android:text="@string/TxtDescEvento"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtViewDesc"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewArea" />
 
     <TextView
         android:id="@+id/txtViewDesc"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:layout_margin="30dp"
-        android:padding="20dp"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+
+    <Button
+        android:id="@+id/btnExluir"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/borda_aredondada"
+        android:padding="10dp"
+        android:text="@string/txtDeleteServ"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:layout_marginBottom="60dp"
+        android:textSize="16sp"
+        app:backgroundTint="@color/Azul"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewDesc" />
+
+    <Button
+        android:id="@+id/btnUpdateServ"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/borda_aredondada"
+        android:padding="10dp"
+        android:text="@string/txtUpdateServ"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:backgroundTint="@color/Azul"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnExluir" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
