--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:scaleType="centerInside"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/conta_icon" />
@@ -32,6 +33,7 @@
         android:layout_width="300dp"
         android:layout_height="38dp"
         android:layout_gravity="center"
+        android:layout_marginTop="24dp"
         android:autofillHints="@string/TxtProcurar"
         android:background="@drawable/borda_bar_de_pesquisa"
         android:backgroundTint="#F1F1F1"
