--- a/app/src/main/res/layout/activity_add_func.xml
+++ b/app/src/main/res/layout/activity_add_func.xml
@@ -7,6 +7,19 @@
     android:background="@color/white"
     tools:context=".AddFunc">
 
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
     <View
         android:id="@+id/viewHeader"
         android:layout_width="wrap_content"
@@ -91,23 +104,59 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:text="@string/TxtCargoFunc"
-        app:layout_constraintBottom_toTopOf="@+id/editCargoFunc"
+        app:layout_constraintBottom_toTopOf="@+id/dropdownCargo"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/editCargoFunc"
-        style="@style/editText"
-        android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@+id/editSenhaFunc"
-        tools:ignore="MissingConstraints" />
+    <Spinner
+        android:id="@+id/dropdownCargo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="40dp"
+        android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editSenhaFunc" />
 
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:text="@string/TxtTel"
+        app:layout_constraintBottom_toTopOf="@+id/editTelFunc"
+        app:layout_constraintStart_toStartOf="parent" />
+
+            <EditText
+                android:id="@+id/editTelFunc"
+                style="@style/editText"
+                android:layout_marginTop="48dp"
+                android:enabled="true"
+                android:inputType="text"
+                app:layout_constraintTop_toBottomOf="@+id/dropdownCargo"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="50dp" />
+
+
+    <ImageButton
+        android:id="@+id/imgBtnListaContatos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
+        android:backgroundTint="@color/white"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="@+id/editTelFunc"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTelFunc"
+        app:srcCompat="@drawable/contatos" />
 
     <Button
         android:id="@+id/btnSalvarFunc"
         android:layout_width="260dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/borda_aredondada"
         app:backgroundTint="@color/Azul"
         android:textColor="@color/white"
@@ -115,7 +164,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editCargoFunc" />
+        app:layout_constraintTop_toBottomOf="@+id/editTelFunc" />
 
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
