--- a/app/src/main/res/layout/activity_add_serv.xml
+++ b/app/src/main/res/layout/activity_add_serv.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".AddServ">
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <View
         android:id="@+id/viewHeader"
@@ -128,6 +140,8 @@
         android:text="@string/TxtplatServ"
         app:layout_constraintBottom_toTopOf="@+id/editAreaserv"
         app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
