--- a/app/src/main/res/layout/activity_lista_serv.xml
+++ b/app/src/main/res/layout/activity_lista_serv.xml
@@ -7,6 +7,15 @@
     android:background="@color/white"
     tools:context=".ListaServ">
 
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -91,7 +100,8 @@
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/myRectangleView2" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+   </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
     <ListView
         android:id="@+id/listviewServ"
