--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,19 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/myRectangleView2"
         android:layout_width="match_parent"
@@ -63,5 +76,34 @@
         android:layout_marginTop="20dp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/myRectangleView2" />
+
+    <Button
+        android:id="@+id/btnServ"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/borda_aredondada"
+        android:foreground="@drawable/add_serv"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/Azul"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnFunc" />
+
+    <Button
+        android:id="@+id/btnFunc"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/borda_aredondada"
+        android:foreground="@drawable/novo_func"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/Azul"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtView46" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
