--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
         android:text="Bem Vindo."
         android:textSize="96px"
@@ -33,39 +33,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="310dp"
-        android:layout_height="198dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
     <EditText
         android:id="@+id/editUserLogin"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
-        android:textSize="16sp"
-        android:paddingLeft="60dp"
-        android:hint="@string/TxtEmailFunc"
-        android:textColor="@color/colorText"
+        android:layout_marginTop="60dp"
         android:background="@drawable/bg_txt_username"
+        android:hint="@string/TxtEmailFunc"
+        android:paddingLeft="60dp"
+        android:textColor="@color/colorText"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />" />
 
     <EditText
         android:id="@+id/EditSenhaLogin"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_margin="20dp"
         android:textSize="16sp"
         android:paddingLeft="60dp"
         android:hint="Password"
@@ -81,7 +69,7 @@
         android:id="@+id/btnLogin"
         android:layout_width="206dp"
         android:layout_height="64dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/borda_aredondada"
         android:text="Sign in"
         android:textColor="@color/white"
