--- a/app/src/main/res/layout/activity_add_func.xml
+++ b/app/src/main/res/layout/activity_add_func.xml
@@ -150,7 +150,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/editTelFunc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editTelFunc"
-        app:srcCompat="@drawable/contatos" />
+        app:srcCompat="@drawable/contato" />
 
     <Button
         android:id="@+id/btnSalvarFunc"
