--- a/app/src/main/res/layout/activity_atualizar_func.xml
+++ b/app/src/main/res/layout/activity_atualizar_func.xml
@@ -40,7 +40,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/TxtAddFunc"
+        android:text="@string/TxtAtualizaFunc"
         android:textAlignment="center"
         android:layout_marginTop="70dp"
         android:textColor="@color/black"
