--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
         android:text="Bem Vindo."
-        android:textSize="96px"
+        android:textSize="42sp"
         android:textColor="@color/colorText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:text="Faça login para entrar"
-        android:textSize="32px"
+        android:textSize="16sp"
         android:textColor="@color/colorText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,12 +42,13 @@
         android:layout_marginTop="60dp"
         android:background="@drawable/bg_txt_username"
         android:hint="@string/TxtEmailFunc"
-        android:paddingLeft="60dp"
+        android:inputType="textEmailAddress"
+        android:paddingStart="60dp"
         android:textColor="@color/colorText"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/EditSenhaLogin"
@@ -55,7 +56,7 @@
         android:layout_height="72dp"
         android:layout_margin="20dp"
         android:textSize="16sp"
-        android:paddingLeft="60dp"
+        android:paddingStart="60dp"
         android:hint="Password"
         android:textColor="@color/colorText"
         android:inputType="textPassword"
