--- a/app/src/main/res/layout/activity_add_func.xml
+++ b/app/src/main/res/layout/activity_add_func.xml
@@ -61,6 +61,7 @@
         android:id="@+id/editEmailFunc"
         style="@style/editText"
         android:inputType="textEmailAddress"
+        android:background="@drawable/border_input"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="50dp" />
@@ -78,6 +79,7 @@
         android:id="@+id/editNomeFunc"
         style="@style/editText"
         android:inputType="textPersonName"
+        android:background="@drawable/border_input"
         app:layout_constraintTop_toBottomOf="@+id/editEmailFunc"
         tools:ignore="MissingConstraints" />
 
@@ -94,6 +96,7 @@
         android:id="@+id/editSenhaFunc"
         style="@style/editText"
         android:inputType="textPassword"
+        android:background="@drawable/border_input"
         app:layout_constraintTop_toBottomOf="@+id/editNomeFunc"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="50dp" />
@@ -133,6 +136,7 @@
                 android:id="@+id/editTelFunc"
                 style="@style/editText"
                 android:layout_marginTop="48dp"
+                android:background="@drawable/border_input"
                 android:enabled="true"
                 android:inputType="text"
                 app:layout_constraintTop_toBottomOf="@+id/dropdownCargo"
@@ -140,17 +144,17 @@
                 tools:layout_editor_absoluteX="50dp" />
 
 
-    <ImageButton
-        android:id="@+id/imgBtnListaContatos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="100dp"
-        android:backgroundTint="@color/white"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@+id/editTelFunc"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTelFunc"
-        app:srcCompat="@drawable/contato" />
+            <ImageButton
+                android:id="@+id/imgBtnListaContatos"
+                android:layout_width="wrap_content"
+                android:layout_height="31dp"
+                android:layout_marginEnd="100dp"
+                android:backgroundTint="@color/white"
+                android:scaleType="center"
+                app:layout_constraintBottom_toBottomOf="@+id/editTelFunc"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/editTelFunc"
+                app:srcCompat="@drawable/contato" />
 
     <Button
         android:id="@+id/btnSalvarFunc"
