--- a/app/src/main/res/layout/activity_atualiza_servico.xml
+++ b/app/src/main/res/layout/activity_atualiza_servico.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AtualizaServico">
+
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="match_parent"
@@ -12,146 +13,170 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-    <View
-        android:id="@+id/viewHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:background="@color/Azul"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/btnFechaAdd"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/fecha" />
+            <View
+                android:id="@+id/viewHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:background="@color/Azul"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/txtUpdateServ"
-        android:textAlignment="center"
-        android:layout_marginTop="70dp"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/btnFechaAdd"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/fecha" />
 
-    <EditText
-        android:id="@+id/editNomeEmpresa"
-        style="@style/editText"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:ignore="MissingConstraints" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
+                android:text="@string/txtUpdateServ"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTitulo"
-        style="@style/editText"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editNomeEmpresa"
-        tools:ignore="MissingConstraints" />
+            <EditText
+                android:id="@+id/editNomeEmpresa"
+                style="@style/editText"
+                android:background="@drawable/border_input"
+                android:inputType="textPersonName"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                tools:ignore="MissingConstraints" />
 
-    <EditText
-        android:id="@+id/editTextDate"
-        style="@style/editText"
-        android:inputType="date"
-        app:layout_constraintTop_toBottomOf="@+id/editTitulo"
-        tools:ignore="MissingConstraints" />
+            <EditText
+                android:id="@+id/editTitulo"
+                style="@style/editText"
+                android:background="@drawable/border_input"
+                android:inputType="textPersonName"
+                app:layout_constraintTop_toBottomOf="@+id/editNomeEmpresa"
+                tools:ignore="MissingConstraints" />
 
-
-    <EditText
-        android:id="@+id/editDescserv"
-        style="@style/editText"
-        android:inputType="textMultiLine"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/editAreaserv"
-        style="@style/editText"
-        android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@+id/editDescserv"
-        tools:ignore="MissingConstraints" />
+            <EditText
+                android:id="@+id/editTextDate"
+                style="@style/editText"
+                android:background="@drawable/border_input"
+                android:inputType="date"
+                app:layout_constraintTop_toBottomOf="@+id/editTitulo"
+                tools:ignore="MissingConstraints" />
 
 
+            <EditText
+                android:id="@+id/editDescserv"
+                style="@style/editText"
+                android:background="@drawable/border_input"
+                android:inputType="date"
+                app:layout_constraintTop_toBottomOf="@+id/editTextDate"
+                tools:ignore="MissingConstraints" />
 
-    <Button
-        android:id="@+id/btnAtualiza"
-        android:layout_width="260dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="80dp"
-        android:background="@drawable/borda_aredondada"
-        app:backgroundTint="@color/Azul"
-        android:textColor="@color/white"
-        android:text="@string/TxtSalvar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editAreaserv" />
+            <Spinner
+                android:id="@+id/dropdownTecUsada"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="44dp"
+                android:layout_marginEnd="50dp"
+                android:background="@drawable/border_input"
+                android:spinnerMode="dropdown"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editDescserv" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:text="@string/TxtPrazo"
-        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
-        app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:text="@string/TxtTitulo"
-        app:layout_constraintBottom_toTopOf="@+id/editTitulo"
-        app:layout_constraintStart_toStartOf="parent" />
+            <Button
+                android:id="@+id/btnAtualiza"
+                android:layout_width="260dp"
+                android:layout_height="64dp"
+                android:background="@drawable/borda_aredondada"
+                android:text="@string/TxtSalvar"
+                android:textColor="@color/white"
+                app:backgroundTint="@color/Azul"
+                android:layout_marginTop="50dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/dropdownNivel" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:text="@string/TxtNomeEmpresa"
-        app:layout_constraintBottom_toTopOf="@+id/editNomeEmpresa"
-        app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="@string/TxtDescServ"
+                app:layout_constraintBottom_toTopOf="@+id/editTextDate"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:text="@string/TxtDescServ"
-        app:layout_constraintBottom_toTopOf="@+id/editDescserv"
-        app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="@string/TxtTitulo"
+                app:layout_constraintBottom_toTopOf="@+id/editTitulo"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:text="@string/TxtplatServ"
-        app:layout_constraintBottom_toTopOf="@+id/editAreaserv"
-        app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="@string/TxtNomeEmpresa"
+                app:layout_constraintBottom_toTopOf="@+id/editNomeEmpresa"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    <Spinner
-        android:id="@+id/dropdownNivel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:spinnerMode="dropdown"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editAreaserv" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="@string/TxtPrazo"
+                app:layout_constraintBottom_toTopOf="@+id/editDescserv"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="@string/TxtplatServ"
+                app:layout_constraintBottom_toTopOf="@+id/dropdownTecUsada"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/txtNivelConclusoa"
+                app:layout_constraintBottom_toTopOf="@+id/dropdownNivel"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/dropdownTecUsada" />
+
+            <Spinner
+                android:id="@+id/dropdownNivel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="56dp"
+                android:layout_marginEnd="50dp"
+                android:background="@drawable/border_input"
+                android:spinnerMode="dropdown"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/dropdownTecUsada" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
