--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="android:layout_marginStart">50dp</item>
         <item name="android:layout_marginEnd">50dp</item>
         <item name="android:layout_marginTop">40dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textSize">14dp</item>
     </style>
 
     <style name="TxtPadraoConta">
