--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,6 +37,14 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <!--Filtro checkBox-->
+    <style name="StyleFiltroCheckbox">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+    </style>
+
 
     <style name="MyToolbarStyle" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:colorBackground">@color/Azul</item>
