--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,10 +67,11 @@
 
             <ImageView
                 android:id="@+id/imgFiltro"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_marginTop="36dp"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
+                android:padding="5dp"
                 app:layout_constraintEnd_toEndOf="@+id/TxtEdtPesquisa"
                 app:layout_constraintTop_toBottomOf="@+id/ImgBtnConta"
                 app:srcCompat="@drawable/ajuste_de_contraste" />
