--- a/app/src/main/res/layout/activity_detalhes_serv.xml
+++ b/app/src/main/res/layout/activity_detalhes_serv.xml
@@ -31,23 +31,34 @@
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/descImgSeta"/>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imgBtnVoltaHome1"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_margin="10dp"
-        android:background="@color/Azul"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/seta_voltar" />
 
-    <ImageButton
+            <TextView
+                android:id="@+id/txtPrazo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="@+id/viewNivelConclusão"
+                app:layout_constraintEnd_toStartOf="@+id/imgBtnsalva"
+                app:layout_constraintStart_toEndOf="@+id/imgBtnVoltaHome1"
+                app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/imgBtnsalva"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_margin="10dp"
-        android:background="@color/Azul"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -100,32 +111,17 @@
         app:layout_constraintStart_toEndOf="@+id/btnImageprazo"
         app:layout_constraintTop_toBottomOf="@+id/txtViewEmpresa" />
 
-    <Button
-        android:id="@+id/btnPrazo"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:text="Button"
-        android:textAllCaps="false"
-        android:textSize="12sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnImageprazo" />
-
-    <TextView
-        android:id="@+id/txtViewArea"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:textAllCaps="false"
-        android:textSize="14sp"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPrazo" />
+            <TextView
+                android:id="@+id/txtViewArea"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:textAllCaps="false"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnImageprazo" />
 
     <TextView
         android:id="@+id/textView9"
