--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
-        android:text="Bem Vindo."
+        android:text="Bem Vindo"
         android:textSize="42sp"
         android:textColor="@color/colorText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,15 +76,6 @@
         android:textColor="@color/white"
         app:backgroundTint="@color/Azul"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditSenhaLogin" />
-
-    <CheckBox
-        android:id="@+id/cbMostraSenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:text="Mostra senha"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EditSenhaLogin" />
 
